Output more information in the failure case in enforceRequireAPIVersion

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2024-09-16
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It is unclear what the root cause of the linked BF is. We should dump some information (e.g. about client, session existence, and checkAuthForInternalClient()) in enforceRequireAPIVersion, and this would give us a better idea of what the root cause is. We would use a low debug level + failure case only.

            Assignee:
            Alex Li
            Reporter:
            Alex Li
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: