SERVER-94519 Output more information in the failure case in enforceRequireAPIVersion (#26909)

GitOrigin-RevId: 65373b49412bbd923178ebcc4ee85f877070b412